--- a/pages/alumni-association/member/member.wxss
+++ b/pages/alumni-association/member/member.wxss
@@ -233,7 +233,7 @@
 .group_7 {
   width: 714rpx;
   flex: 1;
-  max-height: 55vh;
+  max-height: 80vh;
   background-color: #FFFFFF;
   border-radius: 28.99rpx;
   display: flex;
@@ -249,7 +249,16 @@
 .scroll-list {
   flex: 1;
   width: 100%;
-  height: auto;
+  height: 0;
+  min-height: 0;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+.scroll-list::-webkit-scrollbar {
+  display: none;
+  width: 0;
+  height: 0;
+  color: transparent;
 }
 
 .group_7 .member-list-header {
