--- a/pages/alumni-association/organization/organization.wxss
+++ b/pages/alumni-association/organization/organization.wxss
@@ -206,7 +206,16 @@
 .scroll-list {
   flex: 1;
   width: 100%;
-  height: auto;
+  height: 0;
+  min-height: 0;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+.scroll-list::-webkit-scrollbar {
+  display: none;
+  width: 0;
+  height: 0;
+  color: transparent;
 }
 
 .group_19 {
