--- a/pages/audit/schooloffice/organization/organization.wxml
+++ b/pages/audit/schooloffice/organization/organization.wxml
@@ -16,7 +16,7 @@
       <text class="text_25">校促会角色列表</text>
       <view class="text-wrapper_13" bindtap="openAddModal">+新增角色</view>
     </view>
-    <scroll-view class="scroll-list" scroll-y enable-back-to-top show-scrollbar="{{false}}">
+    <scroll-view class="scroll-list" scroll-y enable-back-to-top enhanced show-scrollbar="{{false}}">
       <view wx:if="{{roleLoading}}" class="loading-state">
         <text>加载角色中...</text>
       </view>
