--- a/pages/alumni/list/list.wxss
+++ b/pages/alumni/list/list.wxss
@@ -2,7 +2,7 @@
 
 /* 页面容器 */
 page {
-  background: #0089DF;
+  background: #3F61CA;
   padding: 0;
   margin: 0;
   width: 100%;
@@ -16,7 +16,7 @@ view, text, scroll-view, picker, input, button, image {
 .container {
   width: 100%;
   min-height: 100vh;
-  background: #0089DF;
+  background: #3F61CA;
   padding: 0;
   margin: 0;
 }
@@ -28,7 +28,7 @@ view, text, scroll-view, picker, input, button, image {
   left: 0;
   right: 0;
   height: 350rpx;
-  background: #0089DF;
+  background: #3F61CA;
   z-index: 5;
 }
 
@@ -61,7 +61,7 @@ page {
   position: sticky;
   top: 180rpx;
   z-index: 15;
-  background: #0089DF;
+  background: #3F61CA;
   border-bottom: none;
   bottom: 0;
 }
@@ -81,7 +81,7 @@ page {
   border-radius: 21.74rpx;
   padding: 16rpx 30rpx;
   height: 74.28rpx;
-  background: #0072B3;
+  background: #304BA0;
   border: 1rpx solid rgba(255, 255, 255, 0.2);
   box-sizing: border-box;
   outline: none;
@@ -365,11 +365,15 @@ view, text, picker, input, button, image, navigator {
 
 .cert-badge {
   padding: 4rpx 12rpx;
-  background-color: rgb(226, 175, 22);
-  color: #ffffff;
+  background-color: #FDDA91;
+  color: #B07700;
   font-size: 20rpx;
+  font-weight: 600;
   border-radius: 6rpx;
   flex-shrink: 0;
+  display: flex;
+  align-items: center;
+  height: 34rpx;
 }
 
 /* 学校和地点信息展示 */
