--- a/pages/alumni-association/detail/detail.wxss
+++ b/pages/alumni-association/detail/detail.wxss
@@ -8,46 +8,33 @@
   box-sizing: border-box;
 }
 
-/* 顶部固定区域 */
-.top-fixed-area {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 999;
-  background: #3F61CA;
-}
-
-/* 顶部图片 */
-.top-image-container {
-  width: 100%;
-  padding: 0 30rpx;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 8;
-  position: relative;
-  margin-top: -88rpx;
-  height: 120rpx;
-  background: #3F61CA;
-}
-
-/* 内容滚动区域 */
-.content-scroll {
-  margin-top: 140rpx;
+.association-detail-page {
+  min-height: 100vh;
+  margin-top: 0;
   position: relative;
   z-index: 1;
 }
 
+/* 封面轮播图 */
+.cover-swiper {
+  width: 100%;
+  height: 400rpx;
+}
+
+.cover-image {
+  width: 100%;
+  height: 100%;
+}
+
 /* 白色背景内容区域 */
-.white-background {
+.white-background-content {
   background-color: #ffffff;
-  border-radius: 16rpx 16rpx 0 0;
-  margin-top: -15rpx;
+  border-radius: 24rpx 24rpx 0 0;
+  margin-top: -30rpx;
   position: relative;
   z-index: 10;
   padding-top: 20rpx;
-  min-height: calc(100vh - 140rpx);
+  min-height: 800rpx;
   padding-bottom: 200rpx;
 }
 
