--- a/pages/alumni/detail/detail.wxss
+++ b/pages/alumni/detail/detail.wxss
@@ -90,6 +90,7 @@
   display: flex;
   align-items: center;
   margin-bottom: 12rpx;
+  min-width: 0;
 }
 
 .nickname-text {
@@ -97,6 +98,10 @@
   font-weight: 600;
   color: #fff;
   text-shadow: 0 2rpx 8rpx rgba(0, 0, 0, 0.2);
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 480rpx;
 }
 
 .cert-badge-image {
