--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -69,8 +69,9 @@
       class="article-scroll-view"
       scroll-y="true"
       bindscrolltolower="onReachBottom"
-      bindscrolltoupper="onListRefresh"
-      refresher-enabled="false"
+      refresher-enabled="{{true}}"
+      refresher-triggered="{{refreshing}}"
+      bindrefresherrefresh="onListRefresh"
       scroll-with-animation="true"
       style="height: {{articleScrollHeight}}px;"
       bindtouchstart="onScrollViewTouchStart"
