--- a/pages/alumni-association/apply/apply.wxml
+++ b/pages/alumni-association/apply/apply.wxml
@@ -1,13 +1,6 @@
-<!--pages/alumni-association/apply/apply.wxml-->  
-<!-- 顶部固定区域 -->
-<view class="top-fixed-area">
-  <!-- 自定义导航栏 -->
-  <custom-nav-bar title="申请加入校友会" showBack="{{true}}" textColor="#ffffff"></custom-nav-bar>
-</view>
-
-<!-- 内容滚动区域 -->
-<view class="content-scroll">
-<view class="container" bindtap="closeAllDropdowns">
+<custom-nav-bar useAuditStyle="{{true}}" auditTitle="申请加入校友会" showBack="{{true}}">
+  <view class="white-background-content">
+    <view class="container" bindtap="closeAllDropdowns">
   <image src="https://cni-alumni.yannqing.com/upload/images/2026/02/09/9f328fe3-fcad-4019-a379-1a6db70f3a5d.png" class="header-image" mode="aspectFit"></image>
 
     <!-- 基本信息 -->
@@ -205,3 +198,4 @@
     </view>
   </view>
 </view>
+</custom-nav-bar>
