--- a/pages/alumni-association/create/create.wxml
+++ b/pages/alumni-association/create/create.wxml
@@ -1,12 +1,6 @@
-<!-- 自定义导航栏 -->
-<view class="top-fixed-area">
-  <!-- 自定义导航栏 -->
-  <custom-nav-bar title="创建校友会" showBack="{{true}}" textColor="#ffffff"></custom-nav-bar>
-</view>
-
-<!-- 内容滚动区域 -->
-<view class="content-scroll">
-<view class="container" bindtap="closeAllDropdowns">
+<custom-nav-bar useAuditStyle="{{true}}" auditTitle="创建校友会" showBack="{{true}}">
+  <view class="white-background-content">
+    <view class="container" bindtap="closeAllDropdowns">
   <image src="https://cni-alumni.yannqing.com/upload/images/2026/02/09/9f328fe3-fcad-4019-a379-1a6db70f3a5d.png" class="header-image" mode="aspectFit"></image>
   <view class="form-card">
     <view class="form-title">基本信息</view>
@@ -124,10 +118,10 @@
     </block>
     
     <view wx:if="{{members.length === 0}}" class="empty-tip">暂无其他成员，请点击上方按钮添加</view>
-  </view>
-
-  <view class="form-actions">
-    <button class="submit-btn" bindtap="submitForm">提交申请</button>
+    <view class="form-actions">
+      <button class="submit-btn" bindtap="submitForm">提交申请</button>
+    </view>
+    </view>
   </view>
 </view>
-</view>
+</custom-nav-bar>
